# Kindergarten-Word-Finder

./: CREDITS  PLANNING.md  README.md  shell.nix
godot/: project.godot  rust.gdextension
godot.project/: icon.svg.import  project.godot  rust.gdextension
godot/assets/: background.png.import  button_mode_best.png.import  button_mode_easy.png.import  button_mode_good.png.import  letters.png.import
godot/assets/grandoplexproductions/: 8bitOperatorPlus-Bold.ttf.import  8bitOperatorPlus-Regular.ttf.import
godot/assets/kevinmacleod/: hyperfun.mp3.import  ittybitty8bit.mp3.import  koolkats.mp3.import  spazzmaticapolka.mp3.import
godot/assets/licensed/grandoplexproductions/: 8bitOperatorPlus-Bold.ttf.import  8bitOperatorPlus-Regular.ttf.import
godot/assets/licensed/kevinmacleod/: hyperfun.mp3.import  ittybitty8bit.mp3.import  koolkats.mp3.import  spazzmaticapolka.mp3.import
godot/assets/licensed/luvvoice/: TERMS_OF_SERVICE
godot/assets/unattributed/: apple.mp3.import  apple.png.import  group_yay_cheer-101509.mp3.import
godot/resources/: background.tres  button_mode_best.tres  button_mode_easy.tres  button_mode_good.tres  font_heading.tres  font_normal.tres  letters.tres
godot/scenes/: best_game.tscn  easy_game.tscn  good_game.tscn  main_menu.tscn  show_word.tscn
godot/scripts/: game_scene_manager.gd
rust/: Cargo.toml
rust.project/: Cargo.toml
rust/assets/: best_words.toml  easy_words.toml  good_words.toml  words.toml
rust/src/: letter_manager.rs  letters.rs  lib.rs  managers.rs  words.rs
rust/src/managers/: letter.rs  word.rs
(+66 files in other folders)
