[package]
name = "kindergarten-word-finder"
version = "0.0.1"

edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.1.3", features = ["api-4-2", "serde", "experimental-godot-api"] }
rand = "0.8.5"

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
